ci/ingress1-port.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-k8s-svc
            port:
              number: 8080
