ci/ingress2-dns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-k8s-ingress
spec:
  rules:
  - host: dev1.neogiciel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-k8s-svc
            port:
              number: 80
